refactor: Migrate from Presto to Trino with dependency upgrades
This completes the migration from Presto plugin to Trino plugin with
the following major changes:

Package Renaming:
- com.foursquare.presto.h3 → io.shchoi.trino.h3
- Artifact: h3-presto → trino-h3
- Group: com.foursquare.presto → io.shchoi.trino

Dependency Updates:
- com.facebook.presto:* → io.trino:* (version 436)
- Trino 436 is the first version with JDK 21 support
- H3 core library: 4.3.2 (upgraded from 4.1.1)
- JTS core: 1.20.0 (upgraded from 1.19.0)
- JUnit: 6.0.1, AssertJ: 3.27.6
- Removed Google Guava dependency (replaced with Java standard library)

API Changes:
- Updated all imports from Presto to Trino packages
- Replaced Guava ImmutableList/Set/Map with Java List.of/Set.of/Map.of
- Updated Plugin service loader path
- Maintained all existing H3 function implementations

Test Updates:
- Updated test imports and assertions
- Fixed geometry coordinate order (Trino 436 normalizes polygons)
- Fixed H3 4.3.2 precision differences in edge length calculations
- Replaced Guava collections with Java standard library in tests

Root Cause Analysis for Test Changes:
- H3 GitHub Issue #310 revealed historical documentation error
- Old tests used inradius values instead of actual edge lengths
- Updated with correct H3 4.3.2 edge length values
- Mathematical verification: Edge/Inradius = 2/√3 ≈ 1.1547

All 54 tests pass with the migrated codebase.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>