@@ -1,12 +1,12 @@
-package com.foursquare.presto.h3;
+package io.shchoi.trino.h3;
 
-import static com.foursquare.presto.h3.H3PluginTest.assertQueryResults;
-import static com.foursquare.presto.h3.H3PluginTest.createQueryRunner;
+import static io.shchoi.trino.h3.H3PluginTest.assertQueryResults;
+import static io.shchoi.trino.h3.H3PluginTest.createQueryRunner;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-import com.facebook.presto.testing.QueryRunner;
-import com.google.common.collect.ImmutableList;
+import io.trino.testing.QueryRunner;
 import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.TestInstance.Lifecycle;
@@ -26,34 +26,32 @@ public class IndexingFunctionsTest {
   public void testLatLngToCell() {
     try (QueryRunner queryRunner = createQueryRunner()) {
       assertQueryResults(
-          queryRunner,
-          "SELECT h3_latlng_to_cell(0,0,0) hex",
-          ImmutableList.of(ImmutableList.of(0x8075fffffffffffL)));
+          queryRunner, "SELECT h3_latlng_to_cell(0,0,0) hex", List.of(List.of(0x8075fffffffffffL)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_latlng_to_cell(ST_GeometryFromText('POINT (0 10)'), 0) hex",
-          ImmutableList.of(ImmutableList.of(0x8059fffffffffffL)));
+          List.of(List.of(0x8059fffffffffffL)));
 
       assertQueryResults(
           queryRunner,
           "SELECT h3_latlng_to_cell(ST_GeometryFromText('LINESTRING (0 0, 10 0, 0 10)'), 0) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_latlng_to_cell(null, 0, 4) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_latlng_to_cell(0, 0, null) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_latlng_to_cell(0, 0, -1) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_latlng_to_cell(nan(), 0, 0) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
     }
   }
 
@@ -66,16 +64,12 @@ public class IndexingFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT ST_AsText(h3_cell_to_latlng(from_base('8075fffffffffff', 16)))",
-          ImmutableList.of(ImmutableList.of(expectedPoint)));
+          List.of(List.of(expectedPoint)));
 
       assertQueryResults(
-          queryRunner,
-          "SELECT h3_cell_to_latlng(null)",
-          ImmutableList.of(Collections.singletonList(null)));
+          queryRunner, "SELECT h3_cell_to_latlng(null)", List.of(Collections.singletonList(null)));
       assertQueryResults(
-          queryRunner,
-          "SELECT h3_cell_to_latlng(-1)",
-          ImmutableList.of(Collections.singletonList(null)));
+          queryRunner, "SELECT h3_cell_to_latlng(-1)", List.of(Collections.singletonList(null)));
     }
   }
 
@@ -84,22 +78,21 @@ public class IndexingFunctionsTest {
     try (QueryRunner queryRunner = createQueryRunner()) {
       GeometryFactory geometryFactory = new GeometryFactory();
       WKTReader wktReader = new WKTReader(geometryFactory);
+      // Trino 436 normalizes polygon ring orientation, resulting in reversed coordinate order
       Geometry expectedPolygon =
           wktReader.read(
-              "POLYGON ((-4.013998443470464 11.545295975414755, 3.9430361557864506 3.968796976609579, -0.7828391751055211 -5.889921754313907, -11.66474754212643 -4.467031609784516, -13.708146703917999 6.270965136275774, -4.013998443470464 11.545295975414755))");
+              "POLYGON ((-4.013998443470464 11.545295975414755, -13.708146703917999 6.270965136275774, -11.66474754212643 -4.467031609784516, -0.7828391751055211 -5.889921754313907, 3.9430361557864506 3.968796976609579, -4.013998443470464 11.545295975414755))");
       assertQueryResults(
           queryRunner,
           "SELECT ST_AsText(h3_cell_to_boundary(from_base('8075fffffffffff', 16)))",
-          ImmutableList.of(ImmutableList.of(expectedPolygon)));
+          List.of(List.of(expectedPolygon)));
 
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_boundary(null)",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
-          queryRunner,
-          "SELECT h3_cell_to_boundary(-1)",
-          ImmutableList.of(Collections.singletonList(null)));
+          queryRunner, "SELECT h3_cell_to_boundary(-1)", List.of(Collections.singletonList(null)));
     }
   }
 }
