@@ -13,15 +13,15 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package com.foursquare.presto.h3;
+package io.shchoi.trino.h3;
 
-import static com.foursquare.presto.h3.H3PluginTest.assertQueryResults;
-import static com.foursquare.presto.h3.H3PluginTest.createQueryRunner;
+import static io.shchoi.trino.h3.H3PluginTest.assertQueryResults;
+import static io.shchoi.trino.h3.H3PluginTest.createQueryRunner;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-import com.facebook.presto.testing.QueryRunner;
-import com.google.common.collect.ImmutableList;
+import io.trino.testing.QueryRunner;
 import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.TestInstance.Lifecycle;
@@ -43,9 +43,9 @@ public class RegionFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_polygon_to_cells(ST_GeometryFromText('POLYGON ((0 0, 1 1, 1 0, 0 0))'), 4) hex",
-          ImmutableList.of(
-              ImmutableList.of(
-                  ImmutableList.of(
+          List.of(
+              List.of(
+                  List.of(
                       0x84754ebffffffffL,
                       0x84754e3ffffffffL,
                       0x84754c5ffffffffL,
@@ -55,15 +55,15 @@ public class RegionFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_polygon_to_cells(ST_GeometryFromText('POINT (40 4)'), 4) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_polygon_to_cells(null, 4) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_polygon_to_cells(ST_GeometryFromText('POLYGON ((0 0, 1 1, 1 0, 0 0))'), null) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
     }
   }
 
@@ -72,21 +72,22 @@ public class RegionFunctionsTest {
     try (QueryRunner queryRunner = createQueryRunner()) {
       GeometryFactory geometryFactory = new GeometryFactory();
       WKTReader wktReader = new WKTReader(geometryFactory);
+      // Trino 436 normalizes polygon ring orientation, resulting in reversed coordinate order
       Geometry expectedMultiPolygon =
           wktReader.read(
-              "MULTIPOLYGON (((-121.92354999630156 37.42834118609436, -121.86222328902491 37.353926450852256, -121.91508032705622 37.2713558667319, -122.02910130918998 37.26319797461824, -122.090428929044 37.33755608435299, -122.03773496427027 37.42012867767779, -121.92354999630156 37.42834118609436)))");
+              "MULTIPOLYGON (((-121.92354999630156 37.42834118609436, -122.03773496427027 37.42012867767779, -122.090428929044 37.33755608435299, -122.02910130918998 37.26319797461824, -121.91508032705622 37.2713558667319, -121.86222328902491 37.353926450852256, -121.92354999630156 37.42834118609436)))");
       assertQueryResults(
           queryRunner,
           "SELECT ST_AsText(h3_cells_to_multi_polygon(ARRAY [from_base('85283473fffffff', 16)])) multipolygon",
-          ImmutableList.of(ImmutableList.of(expectedMultiPolygon)));
+          List.of(List.of(expectedMultiPolygon)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_cells_to_multi_polygon(null) multipolygon",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT ST_AsText(h3_cells_to_multi_polygon(ARRAY [])) multipolygon",
-          ImmutableList.of(ImmutableList.of("MULTIPOLYGON EMPTY")));
+          List.of(List.of("MULTIPOLYGON EMPTY")));
     }
   }
 }
