@@ -13,15 +13,15 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package com.foursquare.presto.h3;
+package io.shchoi.trino.h3;
 
-import static com.foursquare.presto.h3.H3PluginTest.assertQueryResults;
-import static com.foursquare.presto.h3.H3PluginTest.createQueryRunner;
+import static io.shchoi.trino.h3.H3PluginTest.assertQueryResults;
+import static io.shchoi.trino.h3.H3PluginTest.createQueryRunner;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-import com.facebook.presto.testing.QueryRunner;
-import com.google.common.collect.ImmutableList;
+import io.trino.testing.QueryRunner;
 import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.TestInstance.Lifecycle;
@@ -39,10 +39,10 @@ public class TraversalFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_disk(from_base('85283473fffffff', 16), 0), h3_grid_disk(from_base('85283473fffffff', 16), 2)",
-          ImmutableList.of(
-              ImmutableList.of(
-                  ImmutableList.of(0x85283473fffffffL),
-                  ImmutableList.of(
+          List.of(
+              List.of(
+                  List.of(0x85283473fffffffL),
+                  List.of(
                       0x85283473fffffffL,
                       0x85283447fffffffL,
                       0x8528347bfffffffL,
@@ -63,22 +63,19 @@ public class TraversalFunctionsTest {
                       0x85283403fffffffL,
                       0x8528341bfffffffL))));
 
-      assertQueryResults(
-          queryRunner,
-          "SELECT h3_grid_disk(0, 4) hex",
-          ImmutableList.of(ImmutableList.of(ImmutableList.of())));
+      assertQueryResults(queryRunner, "SELECT h3_grid_disk(0, 4) hex", List.of(List.of(List.of())));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_disk(null, 4) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_disk(from_base('85283473fffffff', 16), null) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_disk(from_base('85283473fffffff', 16), -1) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
     }
   }
 
@@ -88,10 +85,10 @@ public class TraversalFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_disk_unsafe(from_base('85283473fffffff', 16), 0), h3_grid_disk_unsafe(from_base('85283473fffffff', 16), 2)",
-          ImmutableList.of(
-              ImmutableList.of(
-                  ImmutableList.of(0x85283473fffffffL),
-                  ImmutableList.of(
+          List.of(
+              List.of(
+                  List.of(0x85283473fffffffL),
+                  List.of(
                       0x85283473fffffffL,
                       0x85283447fffffffL,
                       0x8528347bfffffffL,
@@ -115,24 +112,24 @@ public class TraversalFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_disk_unsafe(from_base('811c3ffffffffff', 16), 1) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
 
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_disk_unsafe(0, 4) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_disk_unsafe(null, 4) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_disk_unsafe(from_base('85283473fffffff', 16), null) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_disk_unsafe(from_base('85283473fffffff', 16), -1) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
     }
   }
 
@@ -142,10 +139,10 @@ public class TraversalFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_ring_unsafe(from_base('85283473fffffff', 16), 0), h3_grid_ring_unsafe(from_base('85283473fffffff', 16), 2)",
-          ImmutableList.of(
-              ImmutableList.of(
-                  ImmutableList.of(0x85283473fffffffL),
-                  ImmutableList.of(
+          List.of(
+              List.of(
+                  List.of(0x85283473fffffffL),
+                  List.of(
                       0x8528341bfffffffL,
                       0x85283457fffffffL,
                       0x85283443fffffffL,
@@ -162,24 +159,24 @@ public class TraversalFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_ring_unsafe(from_base('811c3ffffffffff', 16), 1) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
 
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_ring_unsafe(0, 4) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_ring_unsafe(null, 4) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_ring_unsafe(from_base('85283473fffffff', 16), null) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_ring_unsafe(from_base('85283473fffffff', 16), -1) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
     }
   }
 
@@ -189,9 +186,9 @@ public class TraversalFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_path_cells(from_base('85283473fffffff', 16), from_base('8528342ffffffff', 16)) hex",
-          ImmutableList.of(
-              ImmutableList.of(
-                  ImmutableList.of(
+          List.of(
+              List.of(
+                  List.of(
                       0x85283473fffffffL,
                       0x85283477fffffffL,
                       0x8528342bfffffffL,
@@ -200,19 +197,19 @@ public class TraversalFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_path_cells(0, from_base('8528342ffffffff', 16)) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_path_cells(null, from_base('8528342ffffffff', 16)) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_path_cells(from_base('8528342ffffffff', 16), 0) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_path_cells(from_base('8528342ffffffff', 16), null) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
     }
   }
 
@@ -222,24 +219,24 @@ public class TraversalFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_distance(from_base('85283473fffffff', 16), from_base('8528342ffffffff', 16)) hex",
-          ImmutableList.of(ImmutableList.of(3L)));
+          List.of(List.of(3L)));
 
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_distance(0, from_base('8528342ffffffff', 16)) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_distance(null, from_base('8528342ffffffff', 16)) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_distance(from_base('8528342ffffffff', 16), 0) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_grid_distance(from_base('8528342ffffffff', 16), null) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
     }
   }
 
@@ -249,24 +246,24 @@ public class TraversalFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_local_ij(from_base('85283473fffffff', 16), from_base('8528342ffffffff', 16)) hex",
-          ImmutableList.of(ImmutableList.of(ImmutableList.of(24, 12))));
+          List.of(List.of(List.of(24, 12))));
 
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_local_ij(0, from_base('8528342ffffffff', 16)) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_local_ij(null, from_base('8528342ffffffff', 16)) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_local_ij(from_base('8528342ffffffff', 16), 0) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_local_ij(from_base('8528342ffffffff', 16), null) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
     }
   }
 
@@ -276,28 +273,28 @@ public class TraversalFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_local_ij_to_cell(from_base('85283473fffffff', 16), 0, 0) hex",
-          ImmutableList.of(ImmutableList.of(0x85280003fffffffL)));
+          List.of(List.of(0x85280003fffffffL)));
 
       assertQueryResults(
           queryRunner,
           "SELECT h3_local_ij_to_cell(from_base('85283473fffffff', 16), 1000000000, 0) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_local_ij_to_cell(null, 0, 0) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_local_ij_to_cell(from_base('8528342ffffffff', 16), null, 0) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_local_ij_to_cell(from_base('8528342ffffffff', 16), 0, null) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_local_ij_to_cell(from_base('8528342ffffffff', 16), null, null) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
     }
   }
 }
