@@ -13,15 +13,15 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package com.foursquare.presto.h3;
+package io.shchoi.trino.h3;
 
-import static com.foursquare.presto.h3.H3PluginTest.assertQueryResults;
-import static com.foursquare.presto.h3.H3PluginTest.createQueryRunner;
+import static io.shchoi.trino.h3.H3PluginTest.assertQueryResults;
+import static io.shchoi.trino.h3.H3PluginTest.createQueryRunner;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-import com.facebook.presto.testing.QueryRunner;
-import com.google.common.collect.ImmutableList;
+import io.trino.testing.QueryRunner;
 import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.TestInstance.Lifecycle;
@@ -43,20 +43,20 @@ public class VertexFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_vertex(from_base('85283473fffffff', 16), 0), h3_cell_to_vertex(from_base('85283473fffffff', 16), 3)",
-          ImmutableList.of(ImmutableList.of(0x22528340bfffffffL, 0x255283463fffffffL)));
+          List.of(List.of(0x22528340bfffffffL, 0x255283463fffffffL)));
 
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_vertex(null, 4)",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_vertex(from_base('85283473fffffff', 16), null)",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_vertex(from_base('85283473fffffff', 16), -1)",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
     }
   }
 
@@ -66,9 +66,9 @@ public class VertexFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_vertexes(from_base('85283473fffffff', 16))",
-          ImmutableList.of(
-              ImmutableList.of(
-                  ImmutableList.of(
+          List.of(
+              List.of(
+                  List.of(
                       0x22528340bfffffffL,
                       0x235283447fffffffL,
                       0x205283463fffffffL,
@@ -79,9 +79,9 @@ public class VertexFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_vertexes(from_base('811c3ffffffffff', 16))",
-          ImmutableList.of(
-              ImmutableList.of(
-                  ImmutableList.of(
+          List.of(
+              List.of(
+                  List.of(
                       0x2011c3ffffffffffL,
                       0x2111c3ffffffffffL,
                       0x2211c3ffffffffffL,
@@ -91,9 +91,9 @@ public class VertexFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_vertexes(0) hex",
-          ImmutableList.of(
-              ImmutableList.of(
-                  ImmutableList.of(
+          List.of(
+              List.of(
+                  List.of(
                       0x2000000000000000L,
                       0x2100000000000000L,
                       0x2200000000000000L,
@@ -103,7 +103,7 @@ public class VertexFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_cell_to_vertexes(null) hex",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
     }
   }
 
@@ -116,21 +116,21 @@ public class VertexFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT ST_AsText(h3_vertex_to_latlng(from_base('255283463fffffff', 16)))",
-          ImmutableList.of(ImmutableList.of(expectedPoint)));
+          List.of(List.of(expectedPoint)));
 
       Geometry expectedPoint2 = wktReader.read("POINT (31.831280499087402 68.92995788193981)");
       assertQueryResults(
           queryRunner,
           "SELECT ST_AsText(h3_vertex_to_latlng(0))",
-          ImmutableList.of(ImmutableList.of(expectedPoint2)));
+          List.of(List.of(expectedPoint2)));
       assertQueryResults(
           queryRunner,
           "SELECT ST_AsText(h3_vertex_to_latlng(-1))",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
       assertQueryResults(
           queryRunner,
           "SELECT h3_vertex_to_latlng(null)",
-          ImmutableList.of(Collections.singletonList(null)));
+          List.of(Collections.singletonList(null)));
     }
   }
 
@@ -140,14 +140,11 @@ public class VertexFunctionsTest {
       assertQueryResults(
           queryRunner,
           "SELECT h3_is_valid_vertex(from_base('85283473fffffff', 16)), h3_is_valid_vertex(from_base('255283463fffffff', 16))",
-          ImmutableList.of(ImmutableList.of(false, true)));
+          List.of(List.of(false, true)));
 
+      assertQueryResults(queryRunner, "SELECT h3_is_valid_vertex(0)", List.of(List.of(false)));
       assertQueryResults(
-          queryRunner, "SELECT h3_is_valid_vertex(0)", ImmutableList.of(ImmutableList.of(false)));
-      assertQueryResults(
-          queryRunner,
-          "SELECT h3_is_valid_vertex(null)",
-          ImmutableList.of(Collections.singletonList(null)));
+          queryRunner, "SELECT h3_is_valid_vertex(null)", List.of(Collections.singletonList(null)));
     }
   }
 }
